Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h3>Where a Traditional Past Meets A Modern Future</h3>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src=./images/architecture.jpg alt="Riyadh">
+      
     </div>
   </div>
 </body>
