--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-    <h3>Where a Traditional Past Meets A Modern Future</h3>
+    <h2>Where a Traditional Past Meets A Modern Future</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src=./images/architecture.jpg alt="Riyadh">
-      
+      <h3>sdsddd</h3>
     </div>
   </div>
 </body>
