--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src=./images/architecture.jpg alt="Riyadh">
-      <h3>sdsddd</h3>
+      <h3>Travel</h3>
+      <p>Once a </p>
     </div>
   </div>
 </body>
