--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src=./images/architecture.jpg alt="Riyadh">
       <h3>Travel</h3>
-      <p>Once a </p>
+      <p>Once a mudbrick waystation along trading routes, </p>
     </div>
   </div>
 </body>
