--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src=./images/architecture.jpg alt="Riyadh">
       <h3>Travel</h3>
-      <p>Once a mudbrick waystation along trading routes, Riyadh is now one of the wealthiest cities in the world. The countrie's political, financial and administrative capital </p>
+      <p>Once a mudbrick waystation along trading routes, Riyadh is now one of the wealthiest cities in the world. The countrie's political, financial and administrative capital is also a city with a fascinating subtext.</p>
     </div>
   </div>
 </body>
