--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <img src=./images/architecture.jpg alt="Riyadh">
       <h3>Travel</h3>
       <p>Once a mudbrick waystation along trading routes, Riyadh is now one of the wealthiest cities in the world. The countrie's political, financial and administrative capital is also a city with a fascinating subtext.</p>
-      <h3></h3>
+      <h3>History</h3>
+      <P>Lorem ipsum </P>
     </div>
   </div>
 </body>
